--- a/annotation.conf
+++ b/annotation.conf
@@ -14,6 +14,7 @@ RestingWallMotionAbnormalities
 InducibleWallMotionAbnormalities
 GlobalSystolicFunction
 SummaryandConclusions
+Misc
 
 
 [events]
