Added misc entity

--- a/annotation.conf
+++ b/annotation.conf
@@ -14,7 +14,7 @@ RestingWallMotionAbnormalities
 InducibleWallMotionAbnormalities
 GlobalSystolicFunction
 SummaryandConclusions
-
+Misc
 
 [events]
 [attributes]
