--- a/annotation.conf
+++ b/annotation.conf
@@ -72,7 +72,7 @@ Extent Arg:ReversiblePerfusionDefects, Value:SSS|SSS%|SRS|SRS%|SDS|SDS%|%Reversi
 Severety Arg:ReversiblePerfusionDefects, Value:Minor|MinorToMild|Mild|MildToModerate|Moderate|ModerateToSevere|Severe
 
 Presence Arg:FixedPerfusionDefects, Value:Present|Absent
-Location Arg:FixedPerfusionDefects, Value:Proximal|Distal|BasalAnterior|BasalAnteroSeptal|BasalInferoSeptal|BasalInferior|BasalInferoLateral|BasalAnteroLateral|MidAnterior|MidAnteroseptal|MidInferoSeptal|MidInferior|MidInferoLateral|MidAnteroLateral|ApicalAnterior|ApicalSeptal|ApicalInferior|ApicalLateral|Apex|MidSegments|MidToBasalSegments|ApicalToMidSegments|SeptalWall|Mid
+Location Arg:FixedPerfusionDefects, Value:Proximal|Distal|BasalAnteroSeptal|BasalInferoSeptal|BasalInferior|BasalInferoLateral|BasalAnteroLateral|MidAnterior|MidAnteroseptal|MidInferoSeptal|MidInferior|MidInferoLateral|MidAnteroLateral|ApicalAnterior|ApicalSeptal|ApicalInferior|ApicalLateral|Apex|MidSegments|MidToBasalSegments|ApicalToMidSegments|SeptalWall|Mid
 Extent Arg:FixedPerfusionDefects, Value:SSS|SSS%|SRS|SRS%|SDS|SDS%|%Reversibility|%Deficit|#Segments|TPD|%MyocardiumAffected
 Severety Arg:FixedPerfusionDefects, Value:Minor|MinorToMild|Mild|MildToModerate|Moderate|ModerateToSevere|Severe
 
