Added borderline insignificant to perfusion abnormalities

--- a/annotation.conf
+++ b/annotation.conf
@@ -87,7 +87,7 @@ Severity Arg:InducibleWallMotionAbnormalities, Value:Akinesia|RelativeHypokinesi
 EjectionFraction Arg:GlobalSystolicFunction, Value:AtRest|PostStress
 GlobalLeftVentricularFunction Arg:GlobalSystolicFunction, Value:StressEF%|RestEF%|Normal|MildImpairment|ModerateImpairment|SevereImpairment
 
-PerfusionAbnormalities Arg:SummaryandConclusions, Value:Normal|Abnormal|BorderlineSignificant
+PerfusionAbnormalities Arg:SummaryandConclusions, Value:Normal|Abnormal|BorderlineSignificant|BorderlineInsignificant
 TypeOfAbnormalities Arg:SummaryandConclusions, Value:Reversibility|FixedPerfusionDefect|Viability|NoViability|ImpairedLeftVentricle|RegionalWallMotionAbnormalities
 Severity Arg:SummaryandConclusions, Value:SignificantReversibility|NonSignificantReversibility|SevereCardiacIschaemia|Minor|Mild|LowGrade|Moderate|#Segments
 LocationCoronaryArteryTerritory Arg:SummaryandConclusions, Value:LAD|RCA|LCX|Proximal|Distal|BasalAnterior|BasalAnteroSeptal|BasalInferoSeptal|BasalInferior|BasalInferoLateral|BasalAnteroLateral|MidAnterior|MidAnteroseptal|MidInferoSeptal|MidInferior|MidInferoLateral|MidAnteroLateral|ApicalAnterior|ApicalSeptal|ApicalInferior|ApicalLateral|Apex|MidSegments|MidToBasalSegments|ApicalToMidSegments|SeptalWall|Mid
