Updated attributes with type and indications for test

--- a/annotation.conf
+++ b/annotation.conf
@@ -18,18 +18,19 @@ SummaryandConclusions
 [events]
 [attributes]
 
-Negation Arg:<ENTITY>, Value:Affirmed|Negated
 Date Arg:<ENTITY>, Value:<ENTITY>
 Dose Arg:<ENTITY>, Value:<ENTITY>
-Location Arg:<ENTITY>, Value:<ENTITY>
-Percentage Arg:<ENTITY>, Value:<ENTITY>
-Normality Arg:<ENTITY>, Value:Normal|Abnormal
-Severity Arg:<ENTITY>, Value:<ENTITY>
 Extent Arg:<ENTITY>, Value:<ENTITY>
+Location Arg:<ENTITY>, Value:<ENTITY>
+Negation Arg:<ENTITY>, Value:Affirmed|Negated
+Normality Arg:<ENTITY>, Value:Normal|Abnormal
 PatientIdentifiers Arg:Identifiers, Value:Name|DateOfBirth|HospitalNumber|HomeAddress|PostCode|NHSNumber
+Percentage Arg:<ENTITY>, Value:<ENTITY>
+Severity Arg:<ENTITY>, Value:<ENTITY>
 StudyIdentifiers Arg:Identifiers, Value:ReferringClinician|ReportingCardiologist|DateOfScan|DateOfReport|Department|TypeOfScan
+Type:<ENTITY>, Value:<ENTITY>
 
-Indicationfortest Arg:ClinicalInformationPreTest, Value:ElevatedTroponine|Troponine|CoronaryArteryStenosis|Stenosis|InducibleIschaemia|AbnormalAngiogram|PreviousStroke|AbnormalRestECG|UndiagnosticStressECG|AdmissionToHospital|AtrialFibrillation|AtypicalChestTightness|AVNodalTachycardia|CoronaryArteryBlockage|ChestPain|PreviousMI|EquivocalECGChanges|EquivocalExerciseTestSTChanges|HeartFailure|Blockage|PreviousCABG|PreviousPCI|LocationOfPreviousPCI|LVDysfunction|LVImpairment|NonSpecificChestPain|NormalAngiogram|NormalTroponine|Occluded|ParoxysmalAF|PermanentPacemaker|RiskAssessmentBeforeSurgery|PreSurgery|RiskStratificationPreSurgery|ShortnessOfBreath|ShortnessOfBreathOnExertion|IschaemicBurden|PreviousAlcoholIntake|PreviousSmoker|PriorCardiacEvents|PriorCardiacProcedures|Smoker|HeavyAlcoholIntake|DilatedCardiomyopathy|WallMotionAbnormalities|AtrialFlutter
+Indicationfortest Arg:ClinicalInformationPreTest, Value:ElevatedTroponine|NormalTroponine|CoronaryArteryStenosis|InducibleIschaemia|PreviousStroke|AbnormalRestECG|UndiagnosticStressECG|AdmissionToHospital|AtrialFibrillation|AtypicalChestTightness|ChestTightnessonEXertion|Ectopy|AVNodalTachycardia|CoronaryArteryBlockage|ChestPain|ChestPainonExertion|IntermittentPalpitations|PreviousMI|EquivocalECGChanges|EquivocalExerciseTestSTChanges|HeartFailure|PreviousCABG|PreviousPCI|LVDysfunction|LVImpairment|NonSpecificChestPain|NormalAngiogram|ParoxysmalAF|Pacemaker|RiskAssessmentorStratificationPreSurgery|ShortnessOfBreath|IschaemicBurden|AlcoholIntake|Smoker|PriorCardiacEvents|PriorCardiacProcedures|DilatedCardiomyopathy|WallMotionAbnormalities
 Comorbidities Arg:ClinicalInformationPreTest, Value:OA|OAWithKyphosisAndScoliosis|Weight|Claustrophobia
 Riskfactors Arg:ClinicalInformationPreTest, Value:PreviousMI|ElevatedTroponine|CoronaryArteryStenosis|LADStenosis|RCAStenosis|PreviousInducibleIschaemia|PreviousAbnormalAngiogram|DateOfAngiogram|DateOfPreviousCABG|DateOfPreviousPCI|DateOfPreviousStroke|PreviousStroke|AbnormalRestECG|AtrialFibrillation|AF|AtypicalChestTightness|AVNodalTachycardia|CoronaryArteryBlockage|PreviousMI|DateOfPreviousMI|HeartFailure|LADBlockage|PreviousCABG|LocationOfPreviousCABG|LocationOfPreviousInfarction|PreviousPCI|LocationOfPreviousPCI|LVDysfunction|LVImpairment|NormalAngiogram|OccludedLAD|ParoxysmalAF|IschaemicBurden|PreviousAlcoholIntake|PreviousSmoker|PriorCardiacEvents|PriorCardiacProcedures|Smoker|AlcoholIntake|DilatedCardiomyopathy|WallMotionAbnormalities|AtrialFlutter
 Baselineconditionsbeforestress Arg:ClinicalInformationPreTest, Value:BaselineTachycardia|PresentedWithFastAF
