--- a/annotation.conf
+++ b/annotation.conf
@@ -28,7 +28,7 @@ PatientIdentifiers Arg:Identifiers, Value:Name|DateOfBirth|HospitalNumber|HomeAd
 Percentage Arg:<ENTITY>, Value:<ENTITY>
 Severity Arg:<ENTITY>, Value:<ENTITY>
 StudyIdentifiers Arg:Identifiers, Value:ReferringClinician|ReportingCardiologist|DateOfScan|DateOfReport|Department|TypeOfScan
-Type:<ENTITY>, Value:<ENTITY>
+Type Arg:<ENTITY>, Value:<ENTITY>
 
 Indicationfortest Arg:ClinicalInformationPreTest, Value:ElevatedTroponine|NormalTroponine|CoronaryArteryStenosis|InducibleIschaemia|PreviousStroke|AbnormalRestECG|UndiagnosticStressECG|AdmissionToHospital|AtrialFibrillation|AtypicalChestTightness|ChestTightnessonEXertion|Ectopy|AVNodalTachycardia|CoronaryArteryBlockage|ChestPain|ChestPainonExertion|IntermittentPalpitations|PreviousMI|EquivocalECGChanges|EquivocalExerciseTestSTChanges|HeartFailure|PreviousCABG|PreviousPCI|LVDysfunction|LVImpairment|NonSpecificChestPain|NormalAngiogram|ParoxysmalAF|Pacemaker|RiskAssessmentorStratificationPreSurgery|ShortnessOfBreath|IschaemicBurden|AlcoholIntake|Smoker|PriorCardiacEvents|PriorCardiacProcedures|DilatedCardiomyopathy|WallMotionAbnormalities
 Comorbidities Arg:ClinicalInformationPreTest, Value:OA|OAWithKyphosisAndScoliosis|Weight|Claustrophobia
