Updated stress response and side effects to stress

--- a/annotation.conf
+++ b/annotation.conf
@@ -30,14 +30,14 @@ Severity Arg:<ENTITY>, Value:<ENTITY>
 StudyIdentifiers Arg:Identifiers, Value:ReferringClinician|ReportingCardiologist|DateOfScan|DateOfReport|Department|TypeOfScan
 Type Arg:<ENTITY>, Value:<ENTITY>
 
-Indicationfortest Arg:ClinicalInformationPreTest, Value:Troponine|CoronaryArteryStenosis|InducibleIschaemia|PreviousStroke|ECGChanges|StressECGChanges|AdmissionToHospital|ChestTightness|CoronaryArteryBlockage|ChestPain|Palpitations|MI|ExerciseTestorETTChanges|HeartFailure|CABG|PCI|LVDysfunction|LVImpairment|NonSpecificChestPain|ParoxysmalAF|Pacemaker|RiskAssessmentorStratificationPreSurgery|ShortnessOfBreath|IschaemicBurden|AlcoholIntake|Smoker|PriorCardiacEvents|PriorCardiacProcedures|DilatedCardiomyopathy|WallMotionAbnormalities
+Indicationfortest Arg:ClinicalInformationPreTest, Value:Troponine|CoronaryArteryStenosis|InducibleIschaemia|?InducibleIschaemia|PreviousStroke|ECGChanges|StressECGChanges|AdmissionToHospital|ChestTightness|CoronaryArteryBlockage|ChestPain|Palpitations|MI|ExerciseTestorETTChanges|HeartFailure|CABG|PCI|LVDysfunction|LVImpairment|NonSpecificChestPain|ParoxysmalAF|Pacemaker|RiskAssessmentorStratificationPreSurgery|ShortnessOfBreath|IschaemicBurden|AlcoholIntake|Smoker|PriorCardiacEvents|PriorCardiacProcedures|DilatedCardiomyopathy|WallMotionAbnormalities
 Comorbidities Arg:ClinicalInformationPreTest, Value:OA|OAWithKyphosisAndScoliosis|Weight|Claustrophobia
 Riskfactors Arg:ClinicalInformationPreTest, Value:PreviousMI|ElevatedTroponine|CoronaryArteryStenosis|LADStenosis|RCAStenosis|PreviousInducibleIschaemia|PreviousAbnormalAngiogram|DateOfAngiogram|DateOfPreviousCABG|DateOfPreviousPCI|DateOfPreviousStroke|PreviousStroke|AbnormalRestECG|AtrialFibrillation|AF|AtypicalChestTightness|AVNodalTachycardia|CoronaryArteryBlockage|PreviousMI|DateOfPreviousMI|HeartFailure|LADBlockage|PreviousCABG|LocationOfPreviousCABG|LocationOfPreviousInfarction|PreviousPCI|LocationOfPreviousPCI|LVDysfunction|LVImpairment|NormalAngiogram|OccludedLAD|ParoxysmalAF|IschaemicBurden|PreviousAlcoholIntake|PreviousSmoker|PriorCardiacEvents|PriorCardiacProcedures|Smoker|AlcoholIntake|DilatedCardiomyopathy|WallMotionAbnormalities|AtrialFlutter
 Baselineconditionsbeforestress Arg:ClinicalInformationPreTest, Value:BaselineTachycardia|PresentedWithFastAF
 
 StressTechnique Arg:StressingProtocol, Value:DypiridamoleWithErgometry|AdenosineWithErgometry|DobutamineWithErgometry|ErgometryOnly|Regadenoson
 Radiopharmaceutical Arg:StressingProtocol, Value:Tetrofosmin|Sestamibi|MBq
-SressResponse_SideEffectstoStress Arg:StressingProtocol, Value:Assymptomatic|ChestPain|CentralChestPain|NoChestPain|ChestDyscomfort|CentralChestDyscomfort|SOB|SOBOE|Hypertension|Flushing|Vomiting|Retching|Coughing|HaemodynamicChanges|PoorHeartRateResponse|TransientBreathlessness
+SressResponse_SideEffectstoStress Arg:StressingProtocol, Value:Assymptomatic|ChestPain|ChestDyscomfort|ChestTightnesst|SOB|Hypertension|Flushing|Vomiting|Retching|Coughing|HaemodynamicChanges|PoorHeartRateResponse|TransientBreathlessness
 InterventionafterStress_Results Arg:StressingProtocol, Value:THEREWERE|NOVALUES|HERE
 
 TypeofECGChanges Arg:ECGResultsonStressTest, Value:NoSTSegmentChanges|RBBB|LBBB|STSegmentDepression|STSegmentElevation|STSegmentSag|AFThroughout|Bradychardia|Tachycardia
