--- a/annotation.conf
+++ b/annotation.conf
@@ -37,7 +37,7 @@ Baselineconditionsbeforestress Arg:ClinicalInformationPreTest, Value:BaselineTac
 
 StressTechnique Arg:StressingProtocol, Value:DypiridamoleWithErgometry|AdenosineWithErgometry|DobutamineWithErgometry|ErgometryOnly|Regadenoson
 Radiopharmaceutical Arg:StressingProtocol, Value:Tetrofosmin|Sestamibi|MBq
-SressResponse_SideEffectstoStress Arg:StressingProtocol, Value:Assymptomatic|ChestPain|ChestDyscomfort|ChestTightnesst|SOB|Hypertension|Flushing|Vomiting|Retching|Coughing|HaemodynamicChanges|PoorHeartRateResponse|LightHeadedness
+SressResponse_SideEffectstoStress Arg:StressingProtocol, Value:Assymptomatic|ChestPain|ChestDyscomfort|ChestTightnesst|SOB|Hypertension|Flushing|Vomiting|Retching|Coughing|HaemodynamicChanges|PoorHeartRateResponse|LightHeadedness|ECGChanges
 InterventionafterStress_Results Arg:StressingProtocol, Value:THEREWERE|NOVALUES|HERE
 
 TypeofECGChanges Arg:ECGResultsonStressTest, Value:NoSTSegmentChanges|RBBB|LBBB|STSegmentDepression|STSegmentElevation|STSegmentSag|AFThroughout|Bradychardia|Tachycardia
