--- a/annotation.conf
+++ b/annotation.conf
@@ -35,8 +35,8 @@ Comorbidities Arg:ClinicalInformationPreTest, Value:OA|OAWithKyphosisAndScoliosi
 Riskfactors Arg:ClinicalInformationPreTest, Value:PreviousMI|ElevatedTroponine|CoronaryArteryStenosis|LADStenosis|RCAStenosis|PreviousInducibleIschaemia|PreviousAbnormalAngiogram|DateOfAngiogram|DateOfPreviousCABG|DateOfPreviousPCI|DateOfPreviousStroke|PreviousStroke|AbnormalRestECG|AtrialFibrillation|AF|AtypicalChestTightness|AVNodalTachycardia|CoronaryArteryBlockage|PreviousMI|DateOfPreviousMI|HeartFailure|LADBlockage|PreviousCABG|LocationOfPreviousCABG|LocationOfPreviousInfarction|PreviousPCI|LocationOfPreviousPCI|LVDysfunction|LVImpairment|NormalAngiogram|OccludedLAD|ParoxysmalAF|IschaemicBurden|PreviousAlcoholIntake|PreviousSmoker|PriorCardiacEvents|PriorCardiacProcedures|Smoker|AlcoholIntake|DilatedCardiomyopathy|WallMotionAbnormalities|AtrialFlutter
 Baselineconditionsbeforestress Arg:ClinicalInformationPreTest, Value:BaselineTachycardia|PresentedWithFastAF
 
-StressTechnique Arg:StressingProtocol, Value:DypiridamoleWithErgometry|AdenosineWithErgometry|DobutamineWithErgometry|ErgometryOnly|Regadenoson
-Radiopharmaceutical Arg:StressingProtocol, Value:Tetrofosmin|Sestamibi|MBq
+StressTechnique Arg:StressingProtocol, Value:DypiridamoleWithErgometry|AdenosineWithErgometry|DobutamineWithErgometry|ErgometryOnly|Regadenoson|AdenosineOnly
+Radiopharmaceutical Arg:StressingProtocol, Value:Tetrofosmin|Sestamibi
 SressResponse_SideEffectstoStress Arg:StressingProtocol, Value:Assymptomatic|ChestPain|ChestDyscomfort|ChestTightnesst|SOB|Hypertension|Flushing|Vomiting|Retching|Coughing|HaemodynamicChanges|PoorHeartRateResponse|LightHeadedness|ECGChanges
 InterventionafterStress_Results Arg:StressingProtocol, Value:THEREWERE|NOVALUES|HERE
 
