Added imaging artefacts

--- a/annotation.conf
+++ b/annotation.conf
@@ -45,10 +45,11 @@ LocationofECGChanges Arg:ECGResultsonStressTest, Value:InferiorChestLeads|Latera
 SeverityofECGChanges Arg:ECGResultsonStressTest, Value:nonDiagnostic|mm|minor|nonSpecific
 
 OneOrTwoDayProtocol Arg:ImagingProtocol, Value:OneDayProtocol|TwoDayProtocol
-StressRestSequence Arg:ImagingProtocol, Value:StressRestProtocol|RestStressProtocol|StressOnlyProtocol
+StressRestSequence Arg:ImagingProtocol, Value:StressRestProtocol|RestStressProtocol|StressOnly
 AttenuationCorrectionNonAttenuationCorrection Arg:ImagingProtocol, Value:AttenuationCorrection|NoAttenuationCorrection
 GatedNonGated Arg:ImagingProtocol, Value:Gated|NonGated
 MotionCorrectionNonMotionCorrection Arg:ImagingProtocol, Value:MotionCorrection|NoMotionCorrection
+ImagingArtefacts Arg: Present|Absent
 
 Type Arg:LeftVentricularSize, Value:Dilatation|Normal|AbnormalPostStress|AbnormalPostRest
 Presence Arg:LeftVentricularSize, Value:Yes|No|Borderline
