corrected error in imaging artefacts

--- a/annotation.conf
+++ b/annotation.conf
@@ -26,7 +26,8 @@ Negation Arg:<ENTITY>, Value:Affirmed|Negated
 Normality Arg:<ENTITY>, Value:Normal|Abnormal
 PatientIdentifiers Arg:Identifiers, Value:Name|DateOfBirth|HospitalNumber|HomeAddress|PostCode|NHSNumber
 Percentage Arg:<ENTITY>, Value:<ENTITY>
-Severity Arg:<ENTITY>, Value:<ENTITY>
+Presence Arg:<ENTITY>, Value:Present|Absent
+Severity Arg:<ENTITY>, Value:Mild|Moderate|Severe
 StudyIdentifiers Arg:Identifiers, Value:ReferringClinician|ReportingCardiologist|DateOfScan|DateOfReport|Department|TypeOfScan
 Type Arg:<ENTITY>, Value:<ENTITY>
 
@@ -49,24 +50,20 @@ StressRestSequence Arg:ImagingProtocol, Value:StressRestProtocol|RestStressProto
 AttenuationCorrectionNonAttenuationCorrection Arg:ImagingProtocol, Value:AttenuationCorrection|NoAttenuationCorrection
 GatedNonGated Arg:ImagingProtocol, Value:Gated|NonGated
 MotionCorrectionNonMotionCorrection Arg:ImagingProtocol, Value:MotionCorrection|NoMotionCorrection
-ImagingArtefacts Arg:Present|Absent
+Type Arg:ImagingArtefacts, Value:AttenuationArtefact|MovementArtefact|ForeignBody|ElevationOfHemidiaphragm|Overlap
+Location Arg:ImagingArtefacts, Value:InferiorWall|AnteriorWall|AccrossCardiacSilhouette|AccrossLeftChestWall|AccrossAnteriorWall|AccrossInferiorWall
 
 Type Arg:LeftVentricularSize, Value:Dilatation|Normal|AbnormalPostStress|AbnormalPostRest
 Presence Arg:LeftVentricularSize, Value:Yes|No|Borderline
 Classification Arg:LeftVentricularSize, Value:Transient|AtRest
 Extent Arg:LeftVentricularSize, Value:ChangeInMl
-Severety Arg:LeftVentricularSize, Value:PoorMarker
+Severity Arg:LeftVentricularSize, Value:PoorMarker
 
 Type Arg:RightVentricularSize, Value:Dilatation|Normal|HeartFailure|IncreaseInRVUptake|LungUptake
 Presence Arg:RightVentricularSize, Value:Yes|No|RVVolumeMoreProeminentPostStress|IncreasedUptakeAtTheRV
 Classification Arg:RightVentricularSize, Value:TransientDilatationOfTheHeartPostStress
 Extent Arg:RightVentricularSize, Value:ChangeInMl
-Severety Arg:RightVentricularSize, Value:PoorMarker
-
-Type Arg:ImagingArtefacts, Value:AttenuationArtefact|MovementArtefact|ForeignBody|ElevationOfHemidiaphragm|Overlap
-Presence Arg:ImagingArtefacts, Value:Yes|No
-Location Arg:ImagingArtefacts, Value:InferiorWall|AnteriorWall|AccrossCardiacSilhouette|AccrossLeftChestWall|AccrossAnteriorWall|AccrossInferiorWall
-Severety Arg:ImagingArtefact, Value:Mild|Moderate
+Severity Arg:RightVentricularSize, Value:PoorMarker
 
 Presence Arg:ReversiblePerfusionDefects, Value:Present|Absent
 Location Arg:ReversiblePerfusionDefects, Value:Proximal|Distal|BasalAnterior|Anterior|Inferior|Lateral|BasalAnteroSeptal|BasalInferoSeptal|BasalInferior|BasalInferoLateral|BasalAnteroLateral|MidAnterior|MidAnteroseptal|MidInferoSeptal|MidInferior|MidInferoLateral|MidAnteroLateral|ApicalAnterior|ApicalSeptal|ApicalInferior|ApicalLateral|Apex|MidSegments|MidToBasalSegments|ApicalToMidSegments|SeptalWall|Mid
