updated imaging artefacts

--- a/annotation.conf
+++ b/annotation.conf
@@ -50,8 +50,7 @@ StressRestSequence Arg:ImagingProtocol, Value:StressRestProtocol|RestStressProto
 AttenuationCorrectionNonAttenuationCorrection Arg:ImagingProtocol, Value:AttenuationCorrection|NoAttenuationCorrection
 GatedNonGated Arg:ImagingProtocol, Value:Gated|NonGated
 MotionCorrectionNonMotionCorrection Arg:ImagingProtocol, Value:MotionCorrection|NoMotionCorrection
-Type Arg:ImagingArtefacts, Value:AttenuationArtefact|MovementArtefact|ForeignBody|ElevationOfHemidiaphragm|Overlap
-Location Arg:ImagingArtefacts, Value:InferiorWall|AnteriorWall|AccrossCardiacSilhouette|AccrossLeftChestWall|AccrossAnteriorWall|AccrossInferiorWall
+ImagingArtefacts Arg:ImagingProtocol, Value:AttenuationArtefact|MovementArtefact|ForeignBody|ElevationOfHemidiaphragm|OverlapOfHemidiaphragm
 
 Type Arg:LeftVentricularSize, Value:Dilatation|Normal|AbnormalPostStress|AbnormalPostRest
 Presence Arg:LeftVentricularSize, Value:Yes|No|Borderline
