--- a/annotation.conf
+++ b/annotation.conf
@@ -4,10 +4,9 @@ Identifiers
 ClinicalInformationPreTest
 StressingProtocol
 ECGResultsonStressTest
-ImagingProtocol
-LeftVentricularSize
-RightVentricularSize
-ImagingArtefacts
+ImagingProtocolandStudy
+StudyRiskMarkers
+Results
 ReversiblePerfusionDefects
 FixedPerfusionDefects
 RestingWallMotionAbnormalities
@@ -27,14 +26,13 @@ Normality Arg:<ENTITY>, Value:Normal|Abnormal
 PatientIdentifiers Arg:Identifiers, Value:Name|DateOfBirth|HospitalNumber|HomeAddress|PostCode|NHSNumber
 Percentage Arg:<ENTITY>, Value:<ENTITY>
 Presence Arg:<ENTITY>, Value:Present|Absent
-Severity Arg:<ENTITY>, Value:Mild|Moderate|Severe
+Severity Arg:<ENTITY>, Value:Mild|Moderate|Severe|BorderlineInsignificant|BorderlineSignificant
 StudyIdentifiers Arg:Identifiers, Value:ReferringClinician|ReportingCardiologist|DateOfScan|DateOfReport|Department|TypeOfScan
 Type Arg:<ENTITY>, Value:<ENTITY>
 
 Indicationfortest Arg:ClinicalInformationPreTest, Value:Troponine|CoronaryArteryStenosis|InducibleIschaemia|?InducibleIschaemia|PreviousStroke|ECGChanges|StressECGChanges|AdmissionToHospital|ChestTightness|CoronaryArteryBlockage|ChestPain|Palpitations|MI|ExerciseTestorETTChanges|HeartFailure|CABG|PCI|LVDysfunction|LVImpairment|NonSpecificChestPain|ParoxysmalAF|Pacemaker|RiskAssessmentorStratificationPreSurgery|ShortnessOfBreath|IschaemicBurden|AlcoholIntake|Smoker|PriorCardiacEvents|PriorCardiacProcedures|DilatedCardiomyopathy|WallMotionAbnormalities
-Comorbidities Arg:ClinicalInformationPreTest, Value:OA|OAWithKyphosisAndScoliosis|Weight|Claustrophobia
-Riskfactors Arg:ClinicalInformationPreTest, Value:PreviousMI|ElevatedTroponine|CoronaryArteryStenosis|LADStenosis|RCAStenosis|PreviousInducibleIschaemia|PreviousAbnormalAngiogram|DateOfAngiogram|DateOfPreviousCABG|DateOfPreviousPCI|DateOfPreviousStroke|PreviousStroke|AbnormalRestECG|AtrialFibrillation|AF|AtypicalChestTightness|AVNodalTachycardia|CoronaryArteryBlockage|PreviousMI|DateOfPreviousMI|HeartFailure|LADBlockage|PreviousCABG|LocationOfPreviousCABG|LocationOfPreviousInfarction|PreviousPCI|LocationOfPreviousPCI|LVDysfunction|LVImpairment|NormalAngiogram|OccludedLAD|ParoxysmalAF|IschaemicBurden|PreviousAlcoholIntake|PreviousSmoker|PriorCardiacEvents|PriorCardiacProcedures|Smoker|AlcoholIntake|DilatedCardiomyopathy|WallMotionAbnormalities|AtrialFlutter
-Baselineconditionsbeforestress Arg:ClinicalInformationPreTest, Value:BaselineTachycardia|PresentedWithFastAF
+Comorbidities/BaselineConditions Arg:ClinicalInformationPreTest, Value:OA|Overweight|Claustrophobia|BaselineTachycardia|KidneyDisease
+Riskfactors Arg:ClinicalInformationPreTest, Value:HighBloodPressure|Hypertension|Diabetes|SmokingreviousInducibleIschaemia|PreviousAbnormalAngiogram|DateOfAngiogram|DateOfPreviousCABG|DateOfPreviousPCI|DateOfPreviousStroke|PreviousStroke|AbnormalRestECG|AtrialFibrillation|AF|AtypicalChestTightness|AVNodalTachycardia|CoronaryArteryBlockage|PreviousMI|DateOfPreviousMI|HeartFailure|LADBlockage|PreviousCABG|LocationOfPreviousCABG|LocationOfPreviousInfarction|PreviousPCI|LocationOfPreviousPCI|LVDysfunction|LVImpairment|NormalAngiogram|OccludedLAD|ParoxysmalAF|IschaemicBurden|PreviousAlcoholIntake|PreviousSmoker|PriorCardiacEvents|PriorCardiacProcedures|Smoker|AlcoholIntake|DilatedCardiomyopathy|WallMotionAbnormalities|AtrialFlutter
 
 StressTechnique Arg:StressingProtocol, Value:DypiridamoleWithErgometry|AdenosineWithErgometry|DobutamineWithErgometry|ErgometryOnly|Regadenoson|AdenosineOnly
 Radiopharmaceutical Arg:StressingProtocol, Value:Tetrofosmin|Sestamibi
@@ -52,11 +50,9 @@ GatedNonGated Arg:ImagingProtocol, Value:Gated|NonGated
 MotionCorrectionNonMotionCorrection Arg:ImagingProtocol, Value:MotionCorrection|NoMotionCorrection
 ImagingArtefacts Arg:ImagingProtocol, Value:AttenuationArtefact|MovementArtefact|ForeignBody|ElevationOfHemidiaphragm|OverlapOfHemidiaphragm
 
-Type Arg:LeftVentricularSize, Value:Dilatation|Normal|AbnormalPostStress|AbnormalPostRest
-Presence Arg:LeftVentricularSize, Value:Yes|No|Borderline
-Classification Arg:LeftVentricularSize, Value:Transient|AtRest
-Extent Arg:LeftVentricularSize, Value:ChangeInMl
-Severity Arg:LeftVentricularSize, Value:PoorMarker
+Ventricular Dilatation Arg:StudyRiskMarkers, Value:LeftVentricularDilatation|RightVentricularDilatation|NormalCavity|AbnormalPostStress|AbnormalPostRest
+TransientIschaemicDilatation Arg:StudyRiskMarkers, Value:Present|Absent|Borderline
+IncreasedPulmonaryUptake Arg:StudyRiskMarkers, Value:Present|Absent|Borderline
 
 Type Arg:RightVentricularSize, Value:Dilatation|Normal|HeartFailure|IncreaseInRVUptake|LungUptake
 Presence Arg:RightVentricularSize, Value:Yes|No|RVVolumeMoreProeminentPostStress|IncreasedUptakeAtTheRV
