Removed identifier ECG Results on stress test

--- a/annotation.conf
+++ b/annotation.conf
@@ -3,7 +3,6 @@ ClinicDate
 Identifiers
 ClinicalInformationPreTest
 StressingProtocol
-ECGResultsonStressTest
 ImagingProtocolandStudy
 StudyRiskMarkers
 Results
@@ -27,6 +26,7 @@ PatientIdentifiers Arg:Identifiers, Value:Name|DateOfBirth|HospitalNumber|HomeAd
 Percentage Arg:<ENTITY>, Value:<ENTITY>
 Presence Arg:<ENTITY>, Value:Present|Absent
 Severity Arg:<ENTITY>, Value:Mild|Moderate|Severe|BorderlineInsignificant|BorderlineSignificant
+Side Arg:<ENTITY>, Value:Left|Right
 StudyIdentifiers Arg:Identifiers, Value:ReferringClinician|ReportingCardiologist|DateOfScan|DateOfReport|Department|TypeOfScan
 Type Arg:<ENTITY>, Value:<ENTITY>
 
@@ -37,11 +37,9 @@ Riskfactors Arg:ClinicalInformationPreTest, Value:HighBloodPressure|Hypertension
 StressTechnique Arg:StressingProtocol, Value:DypiridamoleWithErgometry|AdenosineWithErgometry|DobutamineWithErgometry|ErgometryOnly|Regadenoson|AdenosineOnly
 Radiopharmaceutical Arg:StressingProtocol, Value:Tetrofosmin|Sestamibi
 SressResponse_SideEffectstoStress Arg:StressingProtocol, Value:Assymptomatic|ChestPain|ChestDyscomfort|ChestTightnesst|SOB|Hypertension|Flushing|Vomiting|Retching|Coughing|HaemodynamicChanges|PoorHeartRateResponse|LightHeadedness|ECGChanges
-InterventionafterStress_Results Arg:StressingProtocol, Value:THEREWERE|NOVALUES|HERE
-
-TypeofECGChanges Arg:ECGResultsonStressTest, Value:NoSTSegmentChanges|RBBB|LBBB|STSegmentDepression|STSegmentElevation|STSegmentSag|AFThroughout|Bradychardia|Tachycardia
-LocationofECGChanges Arg:ECGResultsonStressTest, Value:InferiorChestLeads|LateralChestLeads|InferoLateral|AnteriorLeads|AnteroLateralLeads
-SeverityofECGChanges Arg:ECGResultsonStressTest, Value:nonDiagnostic|mm|minor|nonSpecific
+InterventionafterStress_Results Arg:StressingProtocol, Value:ConservativeMeasures|PharmacologicalIntervention|CPR
+TypeofECGChanges Arg:StressingProtocol, Value:NoSTSegmentChanges|RBBB|LBBB|STSegmentDepression|STSegmentElevation|STSegmentSag|AFThroughout|Bradychardia|Tachycardia
+LocationofECGChanges Arg:StressingProtocol, Value:InferiorChestLeads|LateralChestLeads|InferoLateral|AnteriorLeads|AnteroLateralLeads
 
 OneOrTwoDayProtocol Arg:ImagingProtocol, Value:OneDayProtocol|TwoDayProtocol
 StressRestSequence Arg:ImagingProtocol, Value:StressRestProtocol|RestStressProtocol|StressOnly
@@ -53,12 +51,6 @@ ImagingArtefacts Arg:ImagingProtocol, Value:AttenuationArtefact|MovementArtefact
 Ventricular Dilatation Arg:StudyRiskMarkers, Value:LeftVentricularDilatation|RightVentricularDilatation|NormalCavity|AbnormalPostStress|AbnormalPostRest
 TransientIschaemicDilatation Arg:StudyRiskMarkers, Value:Present|Absent|Borderline
 IncreasedPulmonaryUptake Arg:StudyRiskMarkers, Value:Present|Absent|Borderline
-
-Type Arg:RightVentricularSize, Value:Dilatation|Normal|HeartFailure|IncreaseInRVUptake|LungUptake
-Presence Arg:RightVentricularSize, Value:Yes|No|RVVolumeMoreProeminentPostStress|IncreasedUptakeAtTheRV
-Classification Arg:RightVentricularSize, Value:TransientDilatationOfTheHeartPostStress
-Extent Arg:RightVentricularSize, Value:ChangeInMl
-Severity Arg:RightVentricularSize, Value:PoorMarker
 
 Presence Arg:ReversiblePerfusionDefects, Value:Present|Absent
 Location Arg:ReversiblePerfusionDefects, Value:Proximal|Distal|BasalAnterior|Anterior|Inferior|Lateral|BasalAnteroSeptal|BasalInferoSeptal|BasalInferior|BasalInferoLateral|BasalAnteroLateral|MidAnterior|MidAnteroseptal|MidInferoSeptal|MidInferior|MidInferoLateral|MidAnteroLateral|ApicalAnterior|ApicalSeptal|ApicalInferior|ApicalLateral|Apex|MidSegments|MidToBasalSegments|ApicalToMidSegments|SeptalWall|Mid
