--- a/annotation.conf
+++ b/annotation.conf
@@ -5,11 +5,8 @@ ClinicalInformationPreTest
 StressingProtocol
 ImagingProtocolandStudy
 StudyRiskMarkers
-Results
-ReversiblePerfusionDefects
-FixedPerfusionDefects
-RestingWallMotionAbnormalities
-InducibleWallMotionAbnormalities
+PerfusionResults
+WallMotionResults
 GlobalSystolicFunction
 SummaryandConclusions
 
@@ -30,16 +27,16 @@ Side Arg:<ENTITY>, Value:Left|Right
 StudyIdentifiers Arg:Identifiers, Value:ReferringClinician|ReportingCardiologist|DateOfScan|DateOfReport|Department|TypeOfScan
 Type Arg:<ENTITY>, Value:<ENTITY>
 
-Indicationfortest Arg:ClinicalInformationPreTest, Value:Troponine|CoronaryArteryStenosis|InducibleIschaemia|?InducibleIschaemia|PreviousStroke|ECGChanges|StressECGChanges|AdmissionToHospital|ChestTightness|CoronaryArteryBlockage|ChestPain|Palpitations|MI|ExerciseTestorETTChanges|HeartFailure|CABG|PCI|LVDysfunction|LVImpairment|NonSpecificChestPain|ParoxysmalAF|Pacemaker|RiskAssessmentorStratificationPreSurgery|ShortnessOfBreath|IschaemicBurden|AlcoholIntake|Smoker|PriorCardiacEvents|PriorCardiacProcedures|DilatedCardiomyopathy|WallMotionAbnormalities
-Comorbidities/BaselineConditions Arg:ClinicalInformationPreTest, Value:OA|Overweight|Claustrophobia|BaselineTachycardia|KidneyDisease
-Riskfactors Arg:ClinicalInformationPreTest, Value:HighBloodPressure|Hypertension|Diabetes|SmokingreviousInducibleIschaemia|PreviousAbnormalAngiogram|DateOfAngiogram|DateOfPreviousCABG|DateOfPreviousPCI|DateOfPreviousStroke|PreviousStroke|AbnormalRestECG|AtrialFibrillation|AF|AtypicalChestTightness|AVNodalTachycardia|CoronaryArteryBlockage|PreviousMI|DateOfPreviousMI|HeartFailure|LADBlockage|PreviousCABG|LocationOfPreviousCABG|LocationOfPreviousInfarction|PreviousPCI|LocationOfPreviousPCI|LVDysfunction|LVImpairment|NormalAngiogram|OccludedLAD|ParoxysmalAF|IschaemicBurden|PreviousAlcoholIntake|PreviousSmoker|PriorCardiacEvents|PriorCardiacProcedures|Smoker|AlcoholIntake|DilatedCardiomyopathy|WallMotionAbnormalities|AtrialFlutter
+Indicationfortest Arg:ClinicalInformationPreTest, Value:Troponine|CoronaryArteryStenosis|AssessmentofInducibleIschaemia|ECGChanges|StressECGChanges|ChestTightness|CoronaryArteryBlockage|ChestPain|PastMI|ExerciseTestorETTChanges|CABG|PCI|LVDysfunction|LVImpairment|NonSpecificChestPain|ParoxysmalAF|Pacemaker|RiskAssessmentorStratificationPreSurgery|ShortnessOfBreath|IschaemicBurden|AlcoholIntake|Smoker|PriorCardiacEvents|PriorCardiacProcedures|DilatedCardiomyopathy|WallMotionAbnormalities
+Comorbidities/BaselineConditions Arg:ClinicalInformationPreTest, Value:OA|Overweight|Claustrophobia|BaselineTachycardia|KidneyDisease|PreviousStroke|Palpitations
+Riskfactors Arg:ClinicalInformationPreTest, Value:HighBloodPressure|Hypertension|Diabetes|Smoking|Hypercholesterolaemia|LeftVentricularHypertrophy|Hyperlipidaemia|Atherosclerosis|InsulinResistance|HeartFailure|DilatedCardiomyopathy
 
 StressTechnique Arg:StressingProtocol, Value:DypiridamoleWithErgometry|AdenosineWithErgometry|DobutamineWithErgometry|ErgometryOnly|Regadenoson|AdenosineOnly
 Radiopharmaceutical Arg:StressingProtocol, Value:Tetrofosmin|Sestamibi
-SressResponse_SideEffectstoStress Arg:StressingProtocol, Value:Assymptomatic|ChestPain|ChestDyscomfort|ChestTightnesst|SOB|Hypertension|Flushing|Vomiting|Retching|Coughing|HaemodynamicChanges|PoorHeartRateResponse|LightHeadedness|ECGChanges
-InterventionafterStress_Results Arg:StressingProtocol, Value:ConservativeMeasures|PharmacologicalIntervention|CPR
+StressResponse_SideEffectstoStress Arg:StressingProtocol, Value:Assymptomatic|ChestPain|ChestDyscomfort|ChestTightnesst|SOB|Hypertension|Flushing|Vomiting|Retching|Coughing|HaemodynamicChanges|PoorHeartRateResponse|LightHeadedness|ECGChanges
 TypeofECGChanges Arg:StressingProtocol, Value:NoSTSegmentChanges|RBBB|LBBB|STSegmentDepression|STSegmentElevation|STSegmentSag|AFThroughout|Bradychardia|Tachycardia
 LocationofECGChanges Arg:StressingProtocol, Value:InferiorChestLeads|LateralChestLeads|InferoLateral|AnteriorLeads|AnteroLateralLeads
+InterventionafterStress_Results Arg:StressingProtocol, Value:ConservativeMeasures|PharmacologicalIntervention|CPR
 
 OneOrTwoDayProtocol Arg:ImagingProtocol, Value:OneDayProtocol|TwoDayProtocol
 StressRestSequence Arg:ImagingProtocol, Value:StressRestProtocol|RestStressProtocol|StressOnly
@@ -52,31 +49,22 @@ Ventricular Dilatation Arg:StudyRiskMarkers, Value:LeftVentricularDilatation|Rig
 TransientIschaemicDilatation Arg:StudyRiskMarkers, Value:Present|Absent|Borderline
 IncreasedPulmonaryUptake Arg:StudyRiskMarkers, Value:Present|Absent|Borderline
 
-Presence Arg:ReversiblePerfusionDefects, Value:Present|Absent
-Location Arg:ReversiblePerfusionDefects, Value:Proximal|Distal|BasalAnterior|Anterior|Inferior|Lateral|BasalAnteroSeptal|BasalInferoSeptal|BasalInferior|BasalInferoLateral|BasalAnteroLateral|MidAnterior|MidAnteroseptal|MidInferoSeptal|MidInferior|MidInferoLateral|MidAnteroLateral|ApicalAnterior|ApicalSeptal|ApicalInferior|ApicalLateral|Apex|MidSegments|MidToBasalSegments|ApicalToMidSegments|SeptalWall|Mid
-Extent Arg:ReversiblePerfusionDefects, Value:SSS|SSS%|SRS|SRS%|SDS|SDS%|%Reversibility|%Deficit|#Segments|TPD|%MyocardiumAffected
-Severety Arg:ReversiblePerfusionDefects, Value:Minor|MinorToMild|Mild|MildToModerate|Moderate|ModerateToSevere|Severe
+PerfusionDefects Arg:PerfusionResults, Value:Absent|Reversible|Fixed
+LocationofPerfusionDefects Arg:PerfusionResults, Value:Proximal|Distal|BasalAnterior|Anterior|Inferior|Lateral|BasalAnteroSeptal|BasalInferoSeptal|BasalInferior|BasalInferoLateral|BasalAnteroLateral|MidAnterior|MidAnteroseptal|MidInferoSeptal|MidInferior|MidInferoLateral|MidAnteroLateral|ApicalAnterior|ApicalSeptal|ApicalInferior|ApicalLateral|Apex|MidSegments|MidToBasalSegments|ApicalToMidSegments|SeptalWall|Mid
+ExtentofPerfusionDefects Arg:PerfusionResults, Value:SSS|SSS%|SRS|SRS%|SDS|SDS%|%Reversibility|%Deficit|#Segments|TPD|%MyocardiumAffected|<ENTITY>
+SeveretyofPerfusionDefects Arg:PerfusionResults, Value:Minor|MinorToMild|Mild|MildToModerate|Moderate|ModerateToSevere|Severe
 
-Presence Arg:FixedPerfusionDefects, Value:Present|Absent
-Location Arg:FixedPerfusionDefects, Value:Proximal|Distal|BasalAnterior|Anterior|Inferior|Lateral|BasalAnteroSeptal|BasalInferoSeptal|BasalInferior|BasalInferoLateral|BasalAnteroLateral|MidAnterior|MidAnteroseptal|MidInferoSeptal|MidInferior|MidInferoLateral|MidAnteroLateral|ApicalAnterior|ApicalSeptal|ApicalInferior|ApicalLateral|Apex|MidSegments|MidToBasalSegments|ApicalToMidSegments|SeptalWall|Mid
-Extent Arg:FixedPerfusionDefects, Value:SSS|SSS%|SRS|SRS%|SDS|SDS%|%Reversibility|%Deficit|#Segments|TPD|%MyocardiumAffected
-Severety Arg:FixedPerfusionDefects, Value:Minor|MinorToMild|Mild|MildToModerate|Moderate|ModerateToSevere|Severe
-
-WallMotion Arg:RestingWallMotionAbnormalities, Value:Normal|Abnormal
-Location Arg:RestingWallMotionAbnormalities, Value:Proximal|Distal|BasalAnterior|BasalAnteroSeptal|BasalInferoSeptal|BasalInferior|BasalInferoLateral|BasalAnteroLateral|MidAnterior|MidAnteroseptal|MidInferoSeptal|MidInferior|MidInferoLateral|MidAnteroLateral|ApicalAnterior|ApicalSeptal|ApicalInferior|ApicalLateral|Apex|MidSegments|MidToBasalSegments|ApicalToMidSegments|SeptalWall|Mid
-Severity Arg:RestingWallMotionAbnormalities, Value:Akinesia|RelativeHypokinesia|ModerateToSevere|Dyskinesia
-
-WallMotion Arg:InducibleWallMotionAbnormalities, Value:Normal|Abnormal
-Location Arg:InducibleWallMotionAbnormalities, Value:Proximal|Distal|BasalAnterior|BasalAnteroSeptal|BasalInferoSeptal|BasalInferior|BasalInferoLateral|BasalAnteroLateral|MidAnterior|MidAnteroseptal|MidInferoSeptal|MidInferior|MidInferoLateral|MidAnteroLateral|ApicalAnterior|ApicalSeptal|ApicalInferior|ApicalLateral|Apex|MidSegments|MidToBasalSegments|ApicalToMidSegments|SeptalWall|Mid
-Severity Arg:InducibleWallMotionAbnormalities, Value:Akinesia|RelativeHypokinesia|ModerateToSevere|Dyskinesia
+WallMotionAbnormalities Arg:WallMotionResults, Value:NormalWallMotion|RestingWallMotionAbnormalities|InducibleWallMotionAbnormalities
+LocationofWallMotionAbnormalities Arg:WallMotionResults, Value:Proximal|Distal|BasalAnterior|BasalAnteroSeptal|BasalInferoSeptal|BasalInferior|BasalInferoLateral|BasalAnteroLateral|MidAnterior|MidAnteroseptal|MidInferoSeptal|MidInferior|MidInferoLateral|MidAnteroLateral|ApicalAnterior|ApicalSeptal|ApicalInferior|ApicalLateral|Apex|MidSegments|MidToBasalSegments|ApicalToMidSegments|SeptalWall|Mid
+SeverityofWallMotionAbnormalities Arg:WallMotionResults, Value:Akinesia|RelativeHypokinesia|ModerateToSevere|Dyskinesia
 
 EjectionFraction Arg:GlobalSystolicFunction, Value:AtRest|PostStress
-GlobalLeftVentricularFunction Arg:GlobalSystolicFunction, Value:StressEF%|RestEF%|Normal|MildImpairment|ModerateImpairment|SevereImpairment
+GlobalLeftVentricularFunction Arg:GlobalSystolicFunction, Value:StressEF%|RestEF%|Normal|MildImpairment|ModerateImpairment|SevereImpairment|<ENTITY>
 
 Perfusion Arg:SummaryandConclusions, Value:Normal|Abnormal|BorderlineSignificant|BorderlineInsignificant
 TypeOfAbnormalities Arg:SummaryandConclusions, Value:Reversibility|FixedPerfusionDefect|Viability|NoViability|ImpairedLeftVentricle|RegionalWallMotionAbnormalities
-Severity Arg:SummaryandConclusions, Value:SignificantReversibility|NonSignificantReversibility|SevereCardiacIschaemia|Minor|Mild|LowGrade|Moderate|#Segments
+Severity Arg:SummaryandConclusions, Value:SignificantReversibility|NonSignificantReversibility|SevereCardiacIschaemia|Minor|Mild|LowGrade|Moderate|#Segments|<ENTITY>
 LocationCoronaryArteryTerritory Arg:SummaryandConclusions, Value:LAD|RCA|LCX|Proximal|Distal|BasalAnterior|BasalAnteroSeptal|BasalInferoSeptal|BasalInferior|BasalInferoLateral|BasalAnteroLateral|MidAnterior|MidAnteroseptal|MidInferoSeptal|MidInferior|MidInferoLateral|MidAnteroLateral|ApicalAnterior|ApicalSeptal|ApicalInferior|ApicalLateral|Apex|MidSegments|MidToBasalSegments|ApicalToMidSegments|SeptalWall|Mid
 Prognosis Arg:SummaryandConclusions, Value:GoodPrognosis|IntermediatePrognosis|PoorPrognosis
 LevelOfRisk Arg:SummaryandConclusions, Value:LowRisk|IntermediateRisk|HighRisk
-Recommendations Arg:SummaryandConclusions, Value:MedicalManagement|ConsiderInvasiveManagementIfFailureOfMedicalManagement|InvasiValueveManagement|RuleOut
+Recommendations Arg:SummaryandConclusions, Value:MedicalManagement|InvasiveManagementIfFailureOfMedicalManagement|InvasiveManagement|RuleOut
