Imaging protocol updated

--- a/annotation.conf
+++ b/annotation.conf
@@ -3,7 +3,7 @@ ClinicDate
 Identifiers
 ClinicalInformationPreTest
 StressingProtocol
-ImagingProtocolandStudy
+ImagingProtocol
 StudyRiskMarkers
 PerfusionResults
 WallMotionResults
@@ -49,7 +49,7 @@ Ventricular Dilatation Arg:StudyRiskMarkers, Value:LeftVentricularDilatation|Rig
 TransientIschaemicDilatation Arg:StudyRiskMarkers, Value:Present|Absent|Borderline
 IncreasedPulmonaryUptake Arg:StudyRiskMarkers, Value:Present|Absent|Borderline
 
-PerfusionDefects Arg:PerfusionResults, Value:Absent|Reversible|Fixed
+PerfusionDefects Arg:PerfusionResults, Value:PerfusionWithinNormalLimits|Reversible|Fixed
 LocationofPerfusionDefects Arg:PerfusionResults, Value:Proximal|Distal|BasalAnterior|Anterior|Inferior|Lateral|BasalAnteroSeptal|BasalInferoSeptal|BasalInferior|BasalInferoLateral|BasalAnteroLateral|MidAnterior|MidAnteroseptal|MidInferoSeptal|MidInferior|MidInferoLateral|MidAnteroLateral|ApicalAnterior|ApicalSeptal|ApicalInferior|ApicalLateral|Apex|MidSegments|MidToBasalSegments|ApicalToMidSegments|SeptalWall|Mid
 ExtentofPerfusionDefects Arg:PerfusionResults, Value:SSS|SSS%|SRS|SRS%|SDS|SDS%|%Reversibility|%Deficit|#Segments|TPD|%MyocardiumAffected|<ENTITY>
 SeveretyofPerfusionDefects Arg:PerfusionResults, Value:Minor|MinorToMild|Mild|MildToModerate|Moderate|ModerateToSevere|Severe
