Added probability or likelihood to attributes

--- a/annotation.conf
+++ b/annotation.conf
@@ -22,6 +22,7 @@ Normality Arg:<ENTITY>, Value:Normal|Abnormal
 PatientIdentifiers Arg:Identifiers, Value:Name|DateOfBirth|HospitalNumber|HomeAddress|PostCode|NHSNumber
 Percentage Arg:<ENTITY>, Value:<ENTITY>
 Presence Arg:<ENTITY>, Value:Present|Absent
+ProbabilityorLikelihood Arg:<ENTITY>, Value:VeryLow|Low|High|VeryHigh
 Severity Arg:<ENTITY>, Value:Mild|Moderate|Severe|BorderlineInsignificant|BorderlineSignificant
 Side Arg:<ENTITY>, Value:Left|Right
 StudyIdentifiers Arg:Identifiers, Value:ReferringClinician|ReportingCardiologist|DateOfScan|DateOfReport|Department|TypeOfScan
@@ -54,7 +55,7 @@ LocationofPerfusionDefects Arg:PerfusionResults, Value:Proximal|Distal|BasalAnte
 ExtentofPerfusionDefects Arg:PerfusionResults, Value:SSS|SSS%|SRS|SRS%|SDS|SDS%|%Reversibility|%Deficit|#Segments|TPD|%MyocardiumAffected|<ENTITY>
 SeveretyofPerfusionDefects Arg:PerfusionResults, Value:Minor|MinorToMild|Mild|MildToModerate|Moderate|ModerateToSevere|Severe
 
-WallMotionAbnormalities Arg:WallMotionResults, Value:NormalWallMotion|RestingWallMotionAbnormalities|InducibleWallMotionAbnormalities
+WallMotionAbnormalities Arg:WallMotionResults, Value:AbsenceofWallMotionAbnormalities|RestingWallMotionAbnormalities|InducibleWallMotionAbnormalities
 LocationofWallMotionAbnormalities Arg:WallMotionResults, Value:Proximal|Distal|BasalAnterior|BasalAnteroSeptal|BasalInferoSeptal|BasalInferior|BasalInferoLateral|BasalAnteroLateral|MidAnterior|MidAnteroseptal|MidInferoSeptal|MidInferior|MidInferoLateral|MidAnteroLateral|ApicalAnterior|ApicalSeptal|ApicalInferior|ApicalLateral|Apex|MidSegments|MidToBasalSegments|ApicalToMidSegments|SeptalWall|Mid
 SeverityofWallMotionAbnormalities Arg:WallMotionResults, Value:Akinesia|RelativeHypokinesia|ModerateToSevere|Dyskinesia
 
@@ -65,6 +66,7 @@ Perfusion Arg:SummaryandConclusions, Value:Normal|Abnormal|BorderlineSignificant
 TypeOfAbnormalities Arg:SummaryandConclusions, Value:Reversibility|FixedPerfusionDefect|Viability|NoViability|ImpairedLeftVentricle|RegionalWallMotionAbnormalities
 Severity Arg:SummaryandConclusions, Value:SignificantReversibility|NonSignificantReversibility|SevereCardiacIschaemia|Minor|Mild|LowGrade|Moderate|#Segments|<ENTITY>
 LocationCoronaryArteryTerritory Arg:SummaryandConclusions, Value:LAD|RCA|LCX|Proximal|Distal|BasalAnterior|BasalAnteroSeptal|BasalInferoSeptal|BasalInferior|BasalInferoLateral|BasalAnteroLateral|MidAnterior|MidAnteroseptal|MidInferoSeptal|MidInferior|MidInferoLateral|MidAnteroLateral|ApicalAnterior|ApicalSeptal|ApicalInferior|ApicalLateral|Apex|MidSegments|MidToBasalSegments|ApicalToMidSegments|SeptalWall|Mid
+Diagnosis Arg:SummaryandConclusions, Value:LikelihoodofObstructiveCoronaryArteryDisease|GoodPrognosis|IntermediatePrognosis|PoorPrognosis
 Prognosis Arg:SummaryandConclusions, Value:GoodPrognosis|IntermediatePrognosis|PoorPrognosis
 LevelOfRisk Arg:SummaryandConclusions, Value:LowRisk|IntermediateRisk|HighRisk
 Recommendations Arg:SummaryandConclusions, Value:MedicalManagement|InvasiveManagementIfFailureOfMedicalManagement|InvasiveManagement|RuleOut
