Added frequency to attributes

--- a/annotation.conf
+++ b/annotation.conf
@@ -16,6 +16,7 @@ SummaryandConclusions
 Date Arg:<ENTITY>, Value:<ENTITY>
 Dose Arg:<ENTITY>, Value:<ENTITY>
 Extent Arg:<ENTITY>, Value:<ENTITY>
+Frequency Arg:<ENTITY>, Value:<ENTITY>
 Location Arg:<ENTITY>, Value:<ENTITY>
 Negation Arg:<ENTITY>, Value:Affirmed|Negated
 Normality Arg:<ENTITY>, Value:Normal|Abnormal
