--- a/annotation.conf
+++ b/annotation.conf
@@ -29,8 +29,8 @@ Side Arg:<ENTITY>, Value:Left|Right
 StudyIdentifiers Arg:Identifiers, Value:ReferringClinician|ReportingCardiologist|DateOfScan|DateOfReport|Department|TypeOfScan
 Type Arg:<ENTITY>, Value:<ENTITY>
 
-Indicationfortest Arg:ClinicalInformationPreTest, Value:Troponine|CoronaryArteryStenosis|AssessmentofInducibleIschaemia|ECGChanges|StressECGChanges|ChestTightness|CoronaryArteryBlockage|ChestPain|PastMI|ExerciseTestorETTChanges|CABG|PCI|LVDysfunction|LVImpairment|NonSpecificChestPain|ParoxysmalAF|Pacemaker|RiskAssessmentorStratificationPreSurgery|ShortnessOfBreath|IschaemicBurden|AlcoholIntake|Smoker|PriorCardiacEvents|PriorCardiacProcedures|DilatedCardiomyopathy|WallMotionAbnormalities
-Comorbidities/BaselineConditions Arg:ClinicalInformationPreTest, Value:OA|Overweight|Claustrophobia|BaselineTachycardia|KidneyDisease|PreviousStroke|Palpitations
+Indicationfortest Arg:ClinicalInformationPreTest, Value:CoronaryArteryStenosis|AssessmentofInducibleIschaemia|ECGChanges|StressECGChanges|ChestTightness|ChestPain|Angina|CoronaryArteryBlockage|PastMI|ExerciseTestorETTChanges|LVDysfunction|LVImpairment|ParoxysmalAF|RiskAssessmentorStratificationPreSurgery|ShortnessOfBreath|IschaemicBurden|PriorCardiacEvents|PriorCardiacProcedures|WallMotionAbnormalities
+Comorbidities/BaselineConditions Arg:ClinicalInformationPreTest, Value:OA|Overweight|Claustrophobia|BaselineTachycardia|KidneyDisease|PreviousStroke|Palpitations|Troponine|ECGChanges|Pacemaker|AlcoholIntake
 Riskfactors Arg:ClinicalInformationPreTest, Value:HighBloodPressure|Hypertension|Diabetes|Smoking|Hypercholesterolaemia|LeftVentricularHypertrophy|Hyperlipidaemia|Atherosclerosis|InsulinResistance|HeartFailure|DilatedCardiomyopathy
 
 StressTechnique Arg:StressingProtocol, Value:DypiridamoleWithErgometry|AdenosineWithErgometry|DobutamineWithErgometry|ErgometryOnly|Regadenoson|AdenosineOnly
