Added level of stress to stressing protocol

--- a/annotation.conf
+++ b/annotation.conf
@@ -39,6 +39,7 @@ StressResponse_SideEffectstoStress Arg:StressingProtocol, Value:Assymptomatic|Ch
 TypeofECGChanges Arg:StressingProtocol, Value:NoSTSegmentChanges|RBBB|LBBB|STSegmentDepression|STSegmentElevation|STSegmentSag|AFThroughout|Bradychardia|Tachycardia|InducibleECGChanges
 LocationofECGChanges Arg:StressingProtocol, Value:InferiorChestLeads|LateralChestLeads|InferoLateral|AnteriorLeads|AnteroLateralLeads
 InterventionafterStress_Results Arg:StressingProtocol, Value:ConservativeMeasures|PharmacologicalIntervention|CPR
+LevelofStress Arg:StressingProtocol, Value:Adequate|Suboptimal
 
 OneOrTwoDayProtocol Arg:ImagingProtocol, Value:OneDayProtocol|TwoDayProtocol
 StressRestSequence Arg:ImagingProtocol, Value:StressRestProtocol|RestStressProtocol|StressOnly
