Added quality of scan to imaging protocol

--- a/annotation.conf
+++ b/annotation.conf
@@ -48,6 +48,7 @@ AttenuationCorrectionNonAttenuationCorrection Arg:ImagingProtocol, Value:Attenua
 GatedNonGated Arg:ImagingProtocol, Value:Gated|NonGated
 MotionCorrectionNonMotionCorrection Arg:ImagingProtocol, Value:MotionCorrection|NoMotionCorrection
 ImagingArtefacts Arg:ImagingProtocol, Value:AttenuationArtefact|MovementArtefact|ForeignBody|ElevationOfHemidiaphragm|OverlapOfHemidiaphragm
+QualityOfScan Arg:ImagingProtocol, Value:GoodQuality|PoorQuality
 
 Ventricular Dilatation Arg:StudyRiskMarkers, Value:LeftVentricularDilatation|RightVentricularDilatation|NormalCavity|AbnormalPostStress|AbnormalPostRest
 TransientIschaemicDilatation Arg:StudyRiskMarkers, Value:Present|Absent|Borderline
