--- a/annotation.conf
+++ b/annotation.conf
@@ -20,13 +20,18 @@ Frequency Arg:<ENTITY>, Value:<ENTITY>
 Location Arg:<ENTITY>, Value:<ENTITY>
 Negation Arg:<ENTITY>, Value:Affirmed|Negated
 Normality Arg:<ENTITY>, Value:Normal|Abnormal
-PatientIdentifiers Arg:Identifiers, Value:Name|DateOfBirth|HospitalNumber|HomeAddress|PostCode|NHSNumber
 Percentage Arg:<ENTITY>, Value:<ENTITY>
 ProbabilityorLikelihood Arg:<ENTITY>, Value:VeryLow|Low|High|VeryHigh
 Severity Arg:<ENTITY>, Value:Mild|Moderate|Severe|BorderlineInsignificant|BorderlineSignificant
 Side Arg:<ENTITY>, Value:Left|Right
-StudyIdentifiers Arg:Identifiers, Value:ReferringClinician|ReportingCardiologist|DateOfScan|DateOfReport|Department|TypeOfScan
 Type Arg:<ENTITY>, Value:<ENTITY>
+
+DayDate Arg:ClinicDate, Value:01|02|03|04|05|06|07|08|09|10|11|12|13|14|15|16|17|18|19|20|21|22|23|24|25|26|27|28|29|30|31
+MonthDate Arg:ClinicDate, Value:01|02|03|04|05|06|07|08|09|10|11|12
+YearDate Arg:ClinicDate, Value:2022|2021|2020|2019|2018|2017|2016|2015|2014|2013|2012|2011|2010|2009|2008|2007|2006|2005|2004|2003|2002|2001|2000
+
+PatientIdentifiers Arg:Identifiers, Value:Name|DateOfBirth|HospitalNumber|HomeAddress|PostCode|NHSNumber
+StudyIdentifiers Arg:Identifiers, Value:ReferringClinician|ReportingCardiologist|DateOfScan|DateOfReport|Department|TypeOfScan
 
 Indicationfortest Arg:ClinicalInformationPreTest, Value:CoronaryArteryStenosis|AssessmentofInducibleIschaemia|ECGChanges|StressECGChanges|ChestTightness|ChestPain|Angina|CoronaryArteryBlockage|PastMI|ExerciseTestorETTChanges|LVDysfunction|LVImpairment|ParoxysmalAF|RiskAssessmentorStratificationPreSurgery|ShortnessOfBreath|IschaemicBurden|PriorCardiacEvents|PriorCardiacProcedures|WallMotionAbnormalities
 Comorbidities/BaselineConditions Arg:ClinicalInformationPreTest, Value:OA|Overweight|Claustrophobia|BaselineTachycardia|KidneyDisease|PreviousStroke|Palpitations|RaisedTroponine|ECGChanges|Pacemaker|AlcoholIntake|PeripheralVascularDisease|PeripheralArterialDisease|COPD|Dementia|AirwaysObstruction
