--- a/annotation.conf
+++ b/annotation.conf
@@ -12,7 +12,6 @@ SummaryandConclusions
 [events]
 [attributes]
 
-Dose Arg:<ENTITY>, Value:<ENTITY>
 Extent Arg:<ENTITY>, Value:<ENTITY>
 Frequency Arg:<ENTITY>, Value:<ENTITY>
 Location Arg:<ENTITY>, Value:<ENTITY>
@@ -36,6 +35,7 @@ Riskfactors Arg:ClinicalInformationPreTest, Value:HighBloodPressure|Hypertension
 
 StressTechnique Arg:StressingProtocol, Value:DypiridamoleWithErgometry|AdenosineWithErgometry|DobutamineWithErgometry|ErgometryOnly|Regadenoson|AdenosineOnly
 Radiopharmaceutical Arg:StressingProtocol, Value:Tetrofosmin|Sestamibi
+Dose Arg:StressingProtocol, Value:MBq|mcg|mg
 StressResponse_SideEffectstoStress Arg:StressingProtocol, Value:Assymptomatic|ChestPain|ChestDyscomfort|ChestTightnesst|ShortnessOfBreath|Hypertension|Flushing|Vomiting|Retching|Coughing|HaemodynamicChanges|PoorHeartRateResponse|LightHeadedness|ECGChanges
 TypeofECGChanges Arg:StressingProtocol, Value:NoSTSegmentChanges|RBBB|LBBB|STSegmentDepression|STSegmentElevation|STSegmentSag|AFThroughout|Bradychardia|Tachycardia|InducibleECGChanges
 LocationofECGChanges Arg:StressingProtocol, Value:InferiorChestLeads|LateralChestLeads|InferoLateral|AnteriorLeads|AnteroLateralLeads
