--- a/annotation.conf
+++ b/annotation.conf
@@ -35,7 +35,8 @@ Riskfactors Arg:ClinicalInformationPreTest, Value:HighBloodPressure|Hypertension
 
 StressTechnique Arg:StressingProtocol, Value:DypiridamoleWithErgometry|AdenosineWithErgometry|DobutamineWithErgometry|ErgometryOnly|Regadenoson|AdenosineOnly
 Radiopharmaceutical Arg:StressingProtocol, Value:Tetrofosmin|Sestamibi
-DoseUnits Arg:StressingProtocol, Value:MBq|mcg|mg|<ENTITY>
+Dose Arg:StressingProtocol, Value:<ENTITY>
+DoseUnits Arg:StressingProtocol, Value:MBq|mcg|mg
 StressResponse_SideEffectstoStress Arg:StressingProtocol, Value:Assymptomatic|ChestPain|ChestDyscomfort|ChestTightnesst|ShortnessOfBreath|Hypertension|Flushing|Vomiting|Retching|Coughing|HaemodynamicChanges|PoorHeartRateResponse|LightHeadedness|ECGChanges
 TypeofECGChanges Arg:StressingProtocol, Value:NoSTSegmentChanges|RBBB|LBBB|STSegmentDepression|STSegmentElevation|STSegmentSag|AFThroughout|Bradychardia|Tachycardia|InducibleECGChanges
 LocationofECGChanges Arg:StressingProtocol, Value:InferiorChestLeads|LateralChestLeads|InferoLateral|AnteriorLeads|AnteroLateralLeads
