Change from CRLF to LF end of line character

--- a/annotation.conf
+++ b/annotation.conf
@@ -56,19 +56,19 @@ IncreasedPulmonaryUptake Arg:StudyRiskMarkers, Value:Present|Absent|Borderline
 
 PerfusionDefects Arg:PerfusionResults, Value:PerfusionWithinNormalLimits|Reversible|Fixed
 LocationofPerfusionDefects Arg:PerfusionResults, Value:Proximal|Distal|BasalAnterior|Anterior|Inferior|Lateral|BasalAnteroSeptal|BasalInferoSeptal|BasalInferior|BasalInferoLateral|BasalAnteroLateral|MidAnterior|MidAnteroseptal|MidInferoSeptal|MidInferior|MidInferoLateral|MidAnteroLateral|ApicalAnterior|ApicalSeptal|ApicalInferior|ApicalLateral|Apex|MidSegments|MidToBasalSegments|ApicalToMidSegments|SeptalWall|Mid
-ExtentofPerfusionDefects Arg:PerfusionResults, Value:SSS|SSS%|SRS|SRS%|SDS|SDS%|%Reversibility|%Deficit|#Segments|TPD|%MyocardiumAffected|<ENTITY>
+ExtentofPerfusionDefects Arg:PerfusionResults, Value:SSS|SSS%|SRS|SRS%|SDS|SDS%|%Reversibility|%Deficit|#Segments|TPD|%MyocardiumAffected
 SeveretyofPerfusionDefects Arg:PerfusionResults, Value:Minor|MinorToMild|Mild|MildToModerate|Moderate|ModerateToSevere|Severe
 
 WallMotionAbnormalities Arg:WallMotionResults, Value:AbsenceofWallMotionAbnormalities|RestingWallMotionAbnormalities|InducibleWallMotionAbnormalities
 LocationofWallMotionAbnormalities Arg:WallMotionResults, Value:Proximal|Distal|BasalAnterior|BasalAnteroSeptal|BasalInferoSeptal|BasalInferior|BasalInferoLateral|BasalAnteroLateral|MidAnterior|MidAnteroseptal|MidInferoSeptal|MidInferior|MidInferoLateral|MidAnteroLateral|ApicalAnterior|ApicalSeptal|ApicalInferior|ApicalLateral|Apex|MidSegments|MidToBasalSegments|ApicalToMidSegments|SeptalWall|Mid
 SeverityofWallMotionAbnormalities Arg:WallMotionResults, Value:Akinesia|Hypokinesia|Dyskinesia|Mild|Moderate|ModerateToSevere|Severe
 
-EjectionFraction Arg:GlobalSystolicFunction, Value:AtRest|PostStress|<ENTITY>
-GlobalLeftVentricularFunction Arg:GlobalSystolicFunction, Value:StressEF%|RestEF%|Normal|MildImpairment|ModerateImpairment|SevereImpairment|<ENTITY>
+EjectionFraction Arg:GlobalSystolicFunction, Value:AtRest|PostStress
+GlobalLeftVentricularFunction Arg:GlobalSystolicFunction, Value:StressEF%|RestEF%|Normal|MildImpairment|ModerateImpairment|SevereImpairment
 
 Perfusion Arg:SummaryandConclusions, Value:Normal|Abnormal|BorderlineSignificant|BorderlineInsignificant
 TypeOfAbnormalities Arg:SummaryandConclusions, Value:Reversibility|FixedPerfusionDefect|Viability|NoViability|ImpairedLeftVentricle|RegionalWallMotionAbnormalities
-Severity Arg:SummaryandConclusions, Value:SignificantReversibility|NonSignificantReversibility|SevereCardiacIschaemia|Minor|Mild|LowGrade|Moderate|#Segments|<ENTITY>
+Severity Arg:SummaryandConclusions, Value:SignificantReversibility|NonSignificantReversibility|SevereCardiacIschaemia|Minor|Mild|LowGrade|Moderate|#Segments
 LocationCoronaryArteryTerritory Arg:SummaryandConclusions, Value:LAD|RCA|LCX|Proximal|Distal|BasalAnterior|BasalAnteroSeptal|BasalInferoSeptal|BasalInferior|BasalInferoLateral|BasalAnteroLateral|MidAnterior|MidAnteroseptal|MidInferoSeptal|MidInferior|MidInferoLateral|MidAnteroLateral|ApicalAnterior|ApicalSeptal|ApicalInferior|ApicalLateral|Apex|MidSegments|MidToBasalSegments|ApicalToMidSegments|SeptalWall|Mid
 Diagnosis Arg:SummaryandConclusions, Value:LikelihoodofObstructiveCoronaryArteryDisease
 Prognosis Arg:SummaryandConclusions, Value:GoodPrognosis|IntermediatePrognosis|PoorPrognosis
