--- a/annotation.conf
+++ b/annotation.conf
@@ -23,6 +23,8 @@ Severity Arg:<ENTITY>, Value:Mild|Moderate|Severe|BorderlineInsignificant|Border
 Side Arg:<ENTITY>, Value:Left|Right
 Type Arg:<ENTITY>, Value:<ENTITY>
 
+
+HuwIgnore Arg:Identifiers, Value:Test|test123
 PatientIdentifiers Arg:Identifiers, Value:Name|DateOfBirth|HospitalNumber|HomeAddress|PostCode|NHSNumber
 StudyIdentifiers Arg:Identifiers, Value:ReferringClinician|ReportingCardiologist|DateOfScan|DateOfReport|Department|TypeOfScan
 DayDate Arg:Identifiers, Value:01|02|03|04|05|06|07|08|09|10|11|12|13|14|15|16|17|18|19|20|21|22|23|24|25|26|27|28|29|30|31
