--- a/annotation.conf
+++ b/annotation.conf
@@ -26,7 +26,7 @@ Side Arg:<ENTITY>, Value:Left|Right
 Type Arg:<ENTITY>, Value:<ENTITY>
 
 
-PatientIdentifiers Arg:Identifiers, Value:Name|DateOfBirth|HospitalNumber|HomeAddress|PostCode|NHSNumber
+PatientIdentifiers Arg:Identifiers, Value:Name|DateOfBirth|HospitalNumber|HomeAddress|PostCode|NHSNumber|Gender
 StudyIdentifiers Arg:Identifiers, Value:ReferringClinician|ReportingCardiologist|DateOfScan|DateOfReport|Department|TypeOfScan
 DayDate Arg:Identifiers, Value:01|02|03|04|05|06|07|08|09|10|11|12|13|14|15|16|17|18|19|20|21|22|23|24|25|26|27|28|29|30|31
 MonthDate Arg:Identifiers, Value:01|02|03|04|05|06|07|08|09|10|11|12
@@ -37,7 +37,7 @@ Comorbidities/BaselineConditions Arg:ClinicalInformationPreTest, Value:OA|Overwe
 Riskfactors Arg:ClinicalInformationPreTest, Value:HighBloodPressure|Hypertension|Diabetes|Smoking|Hypercholesterolaemia|LeftVentricularHypertrophy|Hyperlipidaemia|Atherosclerosis|InsulinResistance|HeartFailure|DilatedCardiomyopathy|AgeMen>55|AgeWomen>65
 
 StressTechnique Arg:StressingProtocol, Value:DypiridamoleWithErgometry|AdenosineWithErgometry|DobutamineWithErgometry|ErgometryOnly|Regadenoson|AdenosineOnly
-Radiopharmaceutical Arg:StressingProtocol, Value:Tetrofosmin|Sestamibi
+Radiopharmaceutical Arg:StressingProtocol, Value:Tetrofosmin|Sestamibi|Thallium
 StressResponse_SideEffectstoStress Arg:StressingProtocol, Value:Assymptomatic|ChestPain|ChestDyscomfort|ChestTightnesst|ShortnessOfBreath|Hypertension|Flushing|Vomiting|Retching|Coughing|HaemodynamicChanges|PoorHeartRateResponse|LightHeadedness|ECGChanges
 TypeofECGChanges Arg:StressingProtocol, Value:NoSTSegmentChanges|RBBB|LBBB|STSegmentDepression|STSegmentElevation|STSegmentSag|AFThroughout|Bradychardia|Tachycardia|InducibleECGChanges
 LocationofECGChanges Arg:StressingProtocol, Value:InferiorChestLeads|LateralChestLeads|InferoLateral|AnteriorLeads|AnteroLateralLeads
@@ -53,26 +53,26 @@ ImagingArtefacts Arg:ImagingProtocol, Value:AttenuationArtefact|MovementArtefact
 QualityOfScan Arg:ImagingProtocol, Value:GoodQuality|PoorQuality
 
 Ventricular Dilatation Arg:StudyRiskMarkers, Value:LeftVentricularDilatation|RightVentricularDilatation|NormalCavity|AbnormalPostStress|AbnormalPostRest
+RightVentricularUptake Arg:StudyRiskMarkers, Value:IncreasedPostStress|IncreasedPostRest|NoIncreasePostStress|NoIncreaseAtRest
 TransientIschaemicDilatation Arg:StudyRiskMarkers, Value:Present|Absent|Borderline
 IncreasedPulmonaryUptake Arg:StudyRiskMarkers, Value:Present|Absent|Borderline
 
 PerfusionDefects Arg:PerfusionResults, Value:PerfusionWithinNormalLimits|Reversible|Fixed
 LocationofPerfusionDefects Arg:PerfusionResults, Value:Proximal|Distal|BasalAnterior|Anterior|Inferior|Lateral|BasalAnteroSeptal|BasalInferoSeptal|BasalInferior|BasalInferoLateral|BasalAnteroLateral|MidAnterior|MidAnteroseptal|MidInferoSeptal|MidInferior|MidInferoLateral|MidAnteroLateral|ApicalAnterior|ApicalSeptal|ApicalInferior|ApicalLateral|Apex|MidSegments|MidToBasalSegments|ApicalToMidSegments|SeptalWall|Mid
-ExtentofPerfusionDefects Arg:PerfusionResults, Value:SSS|SSS%|SRS|SRS%|SDS|SDS%|%Reversibility|%Deficit|#Segments|TPD|%MyocardiumAffected|<ENTITY>
+ExtentofPerfusionDefects Arg:PerfusionResults, Value:SSS|SSS%|SRS|SRS%|SDS|SDS%|%Reversibility|%Deficit|#Segments|TPD|%MyocardiumAffected
 SeveretyofPerfusionDefects Arg:PerfusionResults, Value:Minor|MinorToMild|Mild|MildToModerate|Moderate|ModerateToSevere|Severe
 
 WallMotionAbnormalities Arg:WallMotionResults, Value:AbsenceofWallMotionAbnormalities|RestingWallMotionAbnormalities|InducibleWallMotionAbnormalities
 LocationofWallMotionAbnormalities Arg:WallMotionResults, Value:Proximal|Distal|BasalAnterior|BasalAnteroSeptal|BasalInferoSeptal|BasalInferior|BasalInferoLateral|BasalAnteroLateral|MidAnterior|MidAnteroseptal|MidInferoSeptal|MidInferior|MidInferoLateral|MidAnteroLateral|ApicalAnterior|ApicalSeptal|ApicalInferior|ApicalLateral|Apex|MidSegments|MidToBasalSegments|ApicalToMidSegments|SeptalWall|Mid
 SeverityofWallMotionAbnormalities Arg:WallMotionResults, Value:Akinesia|RelativeHypokinesia|ModerateToSevere|Dyskinesia
 
-EjectionFraction Arg:GlobalSystolicFunction, Value:AtRest|PostStress
-GlobalLeftVentricularFunction Arg:GlobalSystolicFunction, Value:StressEF%|RestEF%|Normal|MildImpairment|ModerateImpairment|SevereImpairment|<ENTITY>
+GlobalLeftVentricularFunction Arg:GlobalSystolicFunction, Value:PostStressEF%|PostRestEF%|NormalVentricularFunction|MildImpairment|ModerateImpairment|SevereImpairment
 
-Perfusion Arg:SummaryandConclusions, Value:Normal|Abnormal|BorderlineSignificant|BorderlineInsignificant
+Perfusion Arg:SummaryandConclusions, Value:NormalStudy|AbnormalStudy|BorderlineSignificant|BorderlineInsignificant
 TypeOfAbnormalities Arg:SummaryandConclusions, Value:Reversibility|FixedPerfusionDefect|Viability|NoViability|ImpairedLeftVentricle|RegionalWallMotionAbnormalities
-Severity Arg:SummaryandConclusions, Value:SignificantReversibility|NonSignificantReversibility|SevereCardiacIschaemia|Minor|Mild|LowGrade|Moderate|#Segments|<ENTITY>
+SeverityofAbnormalities Arg:SummaryandConclusions, Value:SignificantReversibility|NonSignificantReversibility|SevereCardiacIschaemia|Minor|Mild|LowGrade|Moderate|#Segments
 LocationCoronaryArteryTerritory Arg:SummaryandConclusions, Value:LAD|RCA|LCX|Proximal|Distal|BasalAnterior|BasalAnteroSeptal|BasalInferoSeptal|BasalInferior|BasalInferoLateral|BasalAnteroLateral|MidAnterior|MidAnteroseptal|MidInferoSeptal|MidInferior|MidInferoLateral|MidAnteroLateral|ApicalAnterior|ApicalSeptal|ApicalInferior|ApicalLateral|Apex|MidSegments|MidToBasalSegments|ApicalToMidSegments|SeptalWall|Mid
-Diagnosis Arg:SummaryandConclusions, Value:LikelihoodofObstructiveCoronaryArteryDisease|GoodPrognosis|IntermediatePrognosis|PoorPrognosis
+Diagnosis Arg:SummaryandConclusions, Value:LikelihoodofObstructiveCoronaryArteryDisease
 Prognosis Arg:SummaryandConclusions, Value:GoodPrognosis|IntermediatePrognosis|PoorPrognosis
 LevelOfRisk Arg:SummaryandConclusions, Value:LowRisk|IntermediateRisk|HighRisk
-Recommendations Arg:SummaryandConclusions, Value:MedicalManagement|InvasiveManagementIfFailureOfMedicalManagement|InvasiveManagement|FurtherInvestigationsRecommended|FollowUpIfAnyClinicalChanges|UnderObservation
+Recommendations Arg:SummaryandConclusions, Value:SingleVesselDisease|MedicalManagement|InvasiveManagementNotRecommended|InvasiveManagementExpectedtoImproveOutcome|InvasiveManagementNotExpectedtoImproveOutcome|FurtherInvestigationsRecommended|FollowUp|UnderObservation
